# fantasy-polymarket

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .gitlab-ci.yml  BACKEND_DEVELOPMENT_PLAN.md  BACKEND_TESTING_INSTRUCTIONS.md  DEPLOYMENT.md  DOCKER.md  README.md  WHOLE_ARCHITECTURE_JOURNEYS_DIAGRAM.md  docker-compose.yml  fantasy_backend.db  main.py  pyproject.toml
artifacts/: AccessControl.json  AccessControl_metadata.json  ContestManager.json  ContestManager_metadata.json  Context_metadata.json  DepositRouter.json  DepositRouter_metadata.json  ECDSA.json  ECDSA_metadata.json  EIP712.json  EIP712_metadata.json  ERC165_metadata.json  ERC20Permit.json  ERC20Permit_metadata.json  ERC20_metadata.json  FantasyToken.json  FantasyToken_metadata.json  IAccessControl.json  IAccessControl_metadata.json  IERC1155Errors_metadata.json  IERC165_metadata.json  IERC20Balance.json  IERC20Balance_metadata.json  IERC20Errors_metadata.json  IERC20Metadata_metadata.json  IERC20Permit_metadata.json  IERC20_metadata.json  IERC5267_metadata.json  IERC721Errors_metadata.json  IFTK.json  IFTK_metadata.json  IFantasyToken.json  IFantasyToken_metadata.json  IOracleAdapter.json  IOracleAdapter_metadata.json  IPlayerShareManager.json  IPlayerShareManager_metadata.json  ITreasury.json  ITreasury_metadata.json  Math.json  (+35 more)
backend/: DEMO_CHECKLIST.md  Dockerfile  alembic.ini
contracts/: ContestManager.sol  DepositRouter.sol  FToken.sol  Oracle.sol  PlayerMarket.sol  PlayerShare.sol  WithdrawRouter.sol  treasury_depricated.sol
frontend/: Dockerfile  FRONTEND_MVP_NEXT_STEPS.md  (+4 more)
(+76 files in other folders)
